--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/skeleton.css" />
+  <link rel="stylesheet" href="css/digital_style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" />
 </head>
 
 <body>
-  <div class="section">
+  <div class="section intro-header" style="background-image: url('img/header_image.jpg')">
     <div class="container">
-      <h1 class="section-heading">Talks by Katie 'glasnt' McLaughlin</h1>
+      <h1 class="section-heading">Talks by Katie McLaughlin</h1>
     </div>
   </div>
 
@@ -17,14 +18,14 @@
   <div class="section">
     <div class="container">
         <div class="row">
-          <div class="four columns">Open Source Developers Conference<br>Hobart, October 2015</div>
-          <div class="four columns">JavaScript is Awe-ful</div>
+          <div class="four columns"><a href="https://2015.osdc.com.au">Open Source Developers Conference</a><br>Hobart, October 2015</div>
+          <div class="four columns"><a href="https://2015.osdc.com.au/schedule/presentation/53/">JavaScript is Awe-ful</a></div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="2015_10_OSDC_JavaScript">Slides</a> | <a href="https://www.youtube.com/watch?v=kK5kp5tjJyc">Video</a></div>
         </div>
         <div class="row">
           <div class="four columns">&nbsp;</div>
-          <div class="four columns">Hack the Planet: A practical guide to web application vulnerabilities</div>
+          <div class="four columns"><a href="https://2015.osdc.com.au/schedule/presentation/8/">Hack the Planet: A practical guide to web application vulnerabilities</a></div>
           <div class="two columns">Workshop</div>
           <div class="two columns"><a href="2015_10_OSDC_Workshop">Slides</a></div>
         </div>
@@ -42,8 +43,8 @@
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">JoomlaDay Australia</br>Brisbane, October 2015</div>
-          <div class="four columns">Build a Better Hat Rack: All Contributions Welcome</div>
+          <div class="four columns"><a href="http://joomladay.org.au">JoomlaDay Australia</a></br>Brisbane, October 2015</div>
+          <div class="four columns"><a href="http://joomladay.org.au/program/schedule">Build a Better Hat Rack: All Contributions Welcome</a></div>
           <div class="two columns">Keynote</div>
           <div class="two columns"><a href="2015_10_JoomlaDay_Keynote">Slides</a></div>
         </div>
@@ -55,7 +56,7 @@
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">Kiwi PyCon<br>Christchurch, September 2015</div>
+          <div class="four columns"><a href="http://kiwi.pycon.org/">Kiwi PyCon</a><br>Christchurch, September 2015</div>
           <div class="four columns">Build a Better Hat Rack: All Contributions Welcome</div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="2015_09_KiwiPyCon">Slides</a> | <a href="https://www.youtube.com/watch?v=wQxFKxbWcFM">Video</a></div> 
@@ -68,14 +69,14 @@
         </div>
 	<div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">PHP New Zealand Warm-Up<br>Wellington, September 2015</div>
+          <div class="four columns"><a href="http://2015.phpconference.org.nz/conference-warm-up/">PHP New Zealand Warm-Up</a><br>Wellington, September 2015</div>
           <div class="four columns">Hat Rack</div>
           <div class="two columns">Lightning Talk</div>
           <div class="two columns"><a href="2015_09_PHPWellington">Slides</a></div> 
         </div>
 	<div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">/dev/world/<br>Melbourne, August 2015</div>
+          <div class="four columns"><a href="http://2015.devworld.com.au">/dev/world/</a><br>Melbourne, August 2015</div>
           <div class="four columns">Build a Better Hat Rack: All Contributions Welcome</div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="2015_08_DevWorld">Slides</a> | <a href="https://www.youtube.com/watch?v=yQGrLrLgT-M">Video</a></div>
@@ -89,10 +90,17 @@
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">PyCon AU<br>Brisbane, August 2015</div>
-          <div class="four columns">Build a Better Hat Rack: All Contributions Welcome</div>
+          <div class="four columns"><a href="http://2015.pycon-au.org">PyCon AU</a><br>Brisbane, August 2015</div>
+          <div class="four columns"><a href="http://2015.pycon-au.org/schedule/30023/view_talk?day=saturday">Build a Better Hat Rack: All Contributions Welcome</a></div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="2015_08_PyCon_AU">Slides</a> | <a href="https://www.youtube.com/watch?v=wNWrr19gE0Y">Video</a></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+          <div class="four columns">OpenStack Miniconf<br>Brisbane, July 2015</div>
+          <div class="four columns">xyz, abc, def</div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="https://twitter.com/glasnt/status/626897751335309312">Slide</a> | <a href="https://twitter.com/glasnt/status/627020535646412800">Feedback</a></div>
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
@@ -100,15 +108,8 @@
           <div class="four columns">Hat Rack</div>
           <div class="two columns">Lightning Talk</div>
           <div class="two columns"><a href="2015_07_SyPy">Slides</a></div>
-        </div>
-	<div class="row">&nbsp;</div>
-        <div class="row">
-          <div class="four columns">OpenStack Miniconf<br>Brisbane, July 2015</div>
-          <div class="four columns">xyz, abc, def</div>
-          <div class="two columns">Lightning Talk</div>
-          <div class="two columns"><a href="https://twitter.com/glasnt/status/626897751335309312">Slide</a> | <a href="https://twitter.com/glasnt/status/627020535646412800">Feedback</a></div>
-        </div>
-   	<div class="row">&nbsp;</div>
+        </div> 
+       	<div class="row">&nbsp;</div>
         <div class="row">
           <div class="four columns">DevOpsDays<br>Melbourne, July 2015</div>
           <div class="four columns">The platform or the road map? </div>
@@ -123,8 +124,8 @@
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">DevOps<br>Sydney, June 2015</div>
-          <div class="four columns">JavaScript Rant</div>
+          <div class="four columns"><a href="http://www.meetup.com/devops-sydney/">DevOps</a><br>Sydney, June 2015</div>
+          <div class="four columns"><a href="http://www.meetup.com/devops-sydney/events/219798291/">JavaScript Rant</a></div>
           <div class="two columns">Lightning Talk</div>
           <div class="two columns"><a href="2015_06_DevOps">Slides</a> | <a href="https://www.youtube.com/watch?v=nx0yt0YsDnA">Video</a></div>
         </div>
@@ -154,8 +155,8 @@
 
    	<div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">DevOps<br>Sydney, March 2015</div>
-          <div class="four columns">Hat Rack</div>
+          <div class="four columns"><a href="http://www.meetup.com/devops-sydney/">DevOps</a><br>Sydney, March 2015</div>
+          <div class="four columns"><a href="http://www.meetup.com/devops-sydney/events/219798291/">Hat Rack</a></div>
           <div class="two columns">Lightning Talk</div>
           <div class="two columns"><a href="2015_03_DevOps/HatRack.pdf">Slides</a></div>
         </div>
@@ -169,14 +170,14 @@
         </div>
  	<div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">Linux Conference Australia<br>Auckland, January 2015</div>
-          <div class="four columns">Before All Else, Be Graphed</div>
+          <div class="four columns"><a href="http://linux.conf.au">Linux Conference Australia</a><br>Auckland, January 2015</div>
+          <div class="four columns"><a href="http://web.archive.org/web/20150310190512/http://linux.conf.au/schedule/30042/view_talk?day=wednesday">Before All Else, Be Graphed</a></div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="2015_01_LCA_Machiavelli">Slides</a> | <a href="https://www.youtube.com/watch?v=My65wJ-sBVc">Video</a></div>
         </div>
         <div class="row">
           <div class="four columns">&nbsp;</div>
-          <div class="four columns">Disentangle a new fangled image mangler</div>
+          <div class="four columns"><a href="http://web.archive.org/web/20150301094554/http://www.annodex.org/events/lca2015_mmm/index.php/Main/Schedule#km">Disentangle a new fangled image mangler</a></div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="2015_01_LCA_Gyprock">Slides</a> | <a href="https://www.youtube.com/watch?v=XedLGMp38xA">Video</a></div>
         </div>
@@ -192,27 +193,28 @@
    	<div class="row">&nbsp;</div>
 
         <div class="row">
-          <div class="four columns">DevOps Sydney<br>Sydney, November 2014</div>
-          <div class="four columns">Integrating Machiavelli and agios</div>
+          <div class="four columns"><a href="http://www.meetup.com/devops-sydney/">DevOps Sydney</a><br>Sydney, November 2014</div>
+          <div class="four columns"><a href="http://www.meetup.com/devops-sydney/events/153704752/">Integrating Machiavelli and Nagios</a></div>
           <div class="two columns">Lightning Talk</div>
           <div class="two columns"><a href="2015_03_DevOps/HatRack.pdf">Slides</a></div>
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">Open Source Developers Conference<br>Gold Coast, October 2014</div>
-          <div class="four columns">Before All Else, Be Graphed</div>
+          <div class="four columns"><a href="http://2014.osdc.com.au/">Open Source Developers Conference</a><br>Gold Coast, October 2014</div>
+          <div class="four columns"><a href="http://2014.osdc.com.au/presentation/481-all-else-be-graphed">Before All Else, Be Graphed</a></div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href=2014_10_OSDC_Gyprock">Slides</a> | <a href="https://www.youtube.com/watch?v=bQfkXh__vnc">Video</a></div>
         </div>
         <div class="row">
           <div class="four columns">&nbsp;</div>
-          <div class="four columns">Disentangle a new fangled image mangler</div>
+          <div class="four columns"><a href="http://2014.osdc.com.au/presentation/12-disentangle-new-fangled-image-mangler">Disentangle a new fangled image mangler</a></div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="2014_10_OSDC_Machiavelli">Slides</a> | <a href="https://www.youtube.com/watch?v=6i0kMCOOIaY">Video</a></div>
         </div>
 
         <div class="row">&nbsp;</div>
         <div class="row">
-        <p>A full list can be seen at: <a href="https://github.com/glasnt/talks">https://github.com/glasnt/talks</a>. Alternatively, check out my <a href="http://lanyrd.com/profile/glasnt/">lanyrd profile</a></p>
+        <p>A full list can be seen at: <a href="https://github.com/glasnt/talks">https://github.com/glasnt/talks</a>. Alternatively, check out my <a href="http://lanyrd.com/profile/glasnt/">lanyrd profile</a><br>
+        <a href="https://www.flickr.com/photos/135164669@N05/21144018852/in/dateposted/">Header image</a> by <a href="https://www.flickr.com/photos/135164669@N05/">Tobi NZPug</a>, used under <a href="https://creativecommons.org/licenses/by/2.0/">CC By 2.0</a>
     </div>
     </div>
