--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">Sydney Python<br>Sydney, July 2015</div>
+          <div class="four columns"><a href="http://sypy.org"Sydney Python</a><br>Sydney, July 2015</div>
           <div class="four columns">Hat Rack</div>
           <div class="two columns">Lightning Talk</div>
           <div class="two columns"><a href="2015_07_SyPy">Slides</a></div>
         </div> 
        	<div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns">DevOpsDays<br>Melbourne, July 2015</div>
+          <div class="four columns"><a href="http://www.devopsdays.org/events/2015-melbourne/">DevOpsDays</a><br>Melbourne, July 2015</div>
           <div class="four columns">The platform or the road map? </div>
           <div class="two columns">Panel</div>
           <div class="two columns"><a href="https://twitter.com/auxesis/status/621820255241793536">Twitter</a></div>
@@ -148,7 +148,7 @@
    	<div class="row">&nbsp;</div>
         <div class="row">
           <div class="four columns">PHP Australia Warm-Up<br>Sydney, March 2015</div>
-          <div class="four columns">In ur s3rvs h4k1ng ur c0dez, a Security Tutorial</div>
+          <div class="four columns">Hat Rack</div>
           <div class="two columns">Lightning Talk</div>
           <div class="two columns"><a href="2015_03_SydPHP/HatRack.pdf">Slides</a></div>
         </div>
