--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
-          <div class="four columns"><a href="http://sypy.org"Sydney Python</a><br>Sydney, July 2015</div>
+          <div class="four columns"><a href="http://sypy.org">SyPy</a><br>Sydney, July 2015</div>
           <div class="four columns">Hat Rack</div>
           <div class="two columns">Lightning Talk</div>
           <div class="two columns"><a href="2015_07_SyPy">Slides</a></div>
