--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         </div>
         <div class="row">
           <div class="four columns">&nbsp;</div>
-          <div class="four columns">Yelling at JavaScript and its attempt at global variables<</div>
+          <div class="four columns">Yelling at JavaScript and its attempt at global variables</div>
           <div class="two columns">Lightning Talk</div>
-          <div class="two columns"><a href="2015_09_KiwiPyCon_Lightning">Slides</a> | <a href="https://youtu.be/_35tn0KrVMo?list=PLBGl1tVyiWQTimQA8ZVUTO7HipxJqYwm0&t=2370">Video</a></div> 
+          <div class="two columns"><a href="2015_09_KiwiPyCon_Lightning">Slides</a> | <a href="https://youtu.be/_35tn0KrVMo?t=2370">Video</a></div> 
         </div>
 	<div class="row">&nbsp;</div>
         <div class="row">
@@ -187,7 +187,7 @@
           <div class="four columns">Women Who Code<br>Sydney, December 2014</div>
           <div class="four columns">Hack and Tell - Machiavelli</div>
           <div class="two columns">Lightning Talk</div>
-          <div class="two columns"><a href="2014_12_WomenWhoCode">Slides</a> | <a href="https://www.youtube.com/watch?v=XedLGMp38xA">Video</a></div>
+          <div class="two columns"><a href="2014_12_WomenWhoCode">Slides</a>Video</a></div>
         </div>
 
    	<div class="row">&nbsp;</div>
