--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   <div class="section">
     <div class="container">
         <div class="row">
+          <div class="four columns"><a href="https://linux.conf.au">Linux Conf AU</a><br>Geelong, Feburary 2016</div>
+          <div class="four columns"><a href="https://linux.conf.au/wiki/Lightning_talks">Hat Rack</a></div>
+          <div class="two columns">Lightning Talk</div>
+          <div class="two columns"><a href="HatRack/HatRack.pdf">Slides</a> | <a href="https://youtu.be/KERsn72QESE?t=503">Video</a></div>
+        </div>
+        <div class="row">
           <div class="four columns"><a href="https://2015.osdc.com.au">Open Source Developers Conference</a><br>Hobart, October 2015</div>
           <div class="four columns"><a href="https://2015.osdc.com.au/schedule/presentation/53/">JavaScript is Awe-ful</a></div>
           <div class="two columns">Talk</div>
