--- a/index.html
+++ b/index.html
@@ -17,6 +17,38 @@
 
   <div class="section">
     <div class="container">
+<!--
+        <div class="row">
+          <div class="four columns"><a href="https://us.pycon.org/2016/">PyCon US</a><br>Portland, May 2016</div>
+          <div class="four columns"><a href="https://us.pycon.org/2016/schedule/presentation/1584/">Build a Better Hat Rack: All Contributions Welcome</a></div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><i>Coming soon</i></div>
+        </div>
+        <div class="row">
+          <div class="four columns"><a href="https://tek.phparch.com/speakers/#70644">php [tek]</a><br>St Louis, May 2016</div>
+          <div class="four columns">Build a Better Hat Rack: All Contributions Welcome</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><i>Coming soon</i></div>
+        </div>
+        <div class="row">
+          <div class="four columns">&nbsp;</div>
+          <div class="four columns">JavaScript is Awe-ful</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><i>Coming soon</i></div>
+        </div>
+        <div class="row">
+          <div class="four columns"><a href="https://djangocon.eu/">DjangoCon EU</a><br>Budapest, March 2016</div>
+          <div class="four columns"><a href="https://djangocon.eu/speakers/11">The power and responsibility of Unicode adoption</a></div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2016_03_DjangoConEU">Slides</a></div>
+        </div>
+-->
+        <div class="row">
+          <div class="four columns"><a href="http://www.meetup.com/devops-sydney/">DevOps</a><br>Sydney, March 2016</div>
+          <div class="four columns"><a href="http://www.meetup.com/devops-sydney/events/221906379/">The power and responsibility of Unicode adoption</a></div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2016_03_SydDevOps">Slides</a></div>
+        </div>
         <div class="row">
           <div class="four columns"><a href="https://linux.conf.au">Linux Conf AU</a><br>Geelong, Feburary 2016</div>
           <div class="four columns"><a href="https://linux.conf.au/wiki/Lightning_talks">Hat Rack</a></div>
@@ -220,7 +252,8 @@
 
         <div class="row">&nbsp;</div>
         <div class="row">
-        <p>A full list can be seen at: <a href="https://github.com/glasnt/talks">https://github.com/glasnt/talks</a>. Alternatively, check out my <a href="http://lanyrd.com/profile/glasnt/">lanyrd profile</a><br>
+        <p><a href="http://lanyrd.com/profile/glasnt/">Lanyrd profile</a>. All my slides are hosted on <a href="https://github.com/glasnt/talks">GitHub</a>.
+<br>
         <a href="https://www.flickr.com/photos/135164669@N05/21144018852/in/dateposted/">Header image</a> by <a href="https://www.flickr.com/photos/135164669@N05/">Tobi NZPug</a>, used under <a href="https://creativecommons.org/licenses/by/2.0/">CC By 2.0</a>
     </div>
     </div>
