--- a/2016_05_PHPTek_JavaScript/index.html
+++ b/2016_05_PHPTek_JavaScript/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/theme/projection.css" id="theme">
     <link rel="stylesheet" href="lib/font/pt-sans/pt-sans.css">
     <link rel="stylesheet" href="lib/css/zenburn.css">
+    <link rel="stylesheet" href="">
     <script>
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
@@ -46,7 +47,8 @@
           { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
           { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
           { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-          { src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+          { src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'highlight' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+
           { src: 'plugin/zoom-js/zoom.js', async: true },
           { src: 'plugin/notes/notes.js', async: true }
         ]
