--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="four columns">&nbsp;</div>
           <div class="four columns">Hat Rack</div>
           <div class="two columns">Lightning Talk</div>
-          <div class="two columns"><a href="HatRack">Slides</a></div>
+          <div class="two columns"><a href="HatRackExtra">Slides</a></div>
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
