--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
           <div class="two columns">Talk</div>
           <div class="two columns"><i>Coming soon</i></div>
         </div>
+-->
         <div class="row">
           <div class="four columns"><a href="https://tek.phparch.com/speakers/#70644">php [tek]</a><br>St Louis, May 2016</div>
           <div class="four columns">Build a Better Hat Rack: All Contributions Welcome</div>
           <div class="two columns">Talk</div>
-          <div class="two columns"><i>Coming soon</i></div>
+          <div class="two columns"><a href="2016_05_PHPTek_Hats">Slides</a></div>
         </div>
         <div class="row">
           <div class="four columns">&nbsp;</div>
           <div class="four columns">JavaScript is Awe-ful</div>
           <div class="two columns">Talk</div>
-          <div class="two columns"><i>Coming soon</i></div>
+          <div class="two columns"><a href="2016_05_PHPTek_JavaScript">Slides</a></div>
         </div>
--->
         <div class="row">
           <div class="four columns"><a href="https://sydphp.org/">SydPHP</a><br>Sydney, April 2016</div>
           <div class="four columns">A short story of emoji</div>
