--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="four columns"><a href="https://us.pycon.org/2016/">PyCon US</a><br>Portland, May 2016</div>
           <div class="four columns"><a href="https://us.pycon.org/2016/schedule/presentation/1584/">Build a Better Hat Rack: All Contributions Welcome</a></div>
           <div class="two columns">Talk</div>
-          <div class="two columns"><a href="http://glasnt.com/talks/2016_05_PyCon_US/">Slides</div>
+          <div class="two columns"><a href="http://glasnt.com/talks/2016_05_PyCon_US/">Slides</a></div>
         </div>
 
         <div class="row">
