--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
       <h2>Full talk history</h2>
 
         <div class="row">
+          <div class="four columns"><a href="http://ignitesydney.com">Ignite Sydney</a><br>Sydney, June 2016</div>
+          <div class="four columns"><a href="http://web.archive.org/web/20160622232400/http://www.ignitesydney.com/speakers/">Emoji are broken 😭</a></div>
+          <div class="two columns">Ignite Talk</div>
+          <div class="two columns"><a href="http://glasnt.com/talks/2016_06_IgniteSydney/">Slides</a></div>
+        </div>
+
+        <div class="row">
           <div class="four columns"><a href="https://us.pycon.org/2016/">PyCon US</a><br>Portland, May 2016</div>
           <div class="four columns"><a href="https://us.pycon.org/2016/schedule/presentation/1584/">Build a Better Hat Rack: All Contributions Welcome</a></div>
           <div class="two columns">Talk</div>
