--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="row">
           <div class="four columns"><a href="http://ignitesydney.com">Ignite Sydney</a><br>Sydney, June 2016</div>
           <div class="four columns"><a href="http://web.archive.org/web/20160622232400/http://www.ignitesydney.com/speakers/">Emoji are broken 😭</a></div>
-          <div class="two columns">Ignite Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="http://glasnt.com/talks/2016_06_IgniteSydney/">Slides</a></div>
         </div>
 
@@ -81,7 +81,7 @@
         <div class="row">
           <div class="four columns"><a href="https://sydphp.org/">SydPHP</a><br>Sydney, April 2016</div>
           <div class="four columns">A short story of emoji</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="2016_03_DjangoConEU">Slides</a></div>
         </div>
         <div class="row">&nbsp;</div>
@@ -94,7 +94,7 @@
         <div class="row">
           <div class="four columns">&nbsp;</div>
           <div class="four columns">Hat Rack</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="HatRackExtra">Slides</a></div>
         </div>
         <div class="row">&nbsp;</div>
@@ -108,7 +108,7 @@
         <div class="row">
           <div class="four columns"><a href="https://linux.conf.au">Linux Conf AU</a><br>Geelong, Feburary 2016</div>
           <div class="four columns"><a href="https://linux.conf.au/wiki/Lightning_talks">Hat Rack</a></div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="HatRack/HatRack.pdf">Slides</a> | <a href="https://youtu.be/KERsn72QESE?t=503">Video</a></div>
         </div>
         <div class="row">&nbsp;</div>
@@ -127,13 +127,13 @@
         <div class="row">
           <div class="four columns">&nbsp;</div>
           <div class="four columns">Hat Rack</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="HatRack">Slides</a> |  <a href="https://youtu.be/1xWQ_eUuGmk?t=2211">Video</a></div>
         </div>
         <div class="row">
           <div class="four columns">&nbsp;</div>
           <div class="four columns">Serialization Formats are Not Toys (Cover Version)</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="http://s3.eastman.net.nz/serialization/">Slides</a> | <a href="https://youtu.be/BXv9KpYrW0w?t=1761">Video</a></div>
         </div>
         <div class="row">&nbsp;</div>
@@ -159,14 +159,14 @@
         <div class="row">
           <div class="four columns">&nbsp;</div>
           <div class="four columns">Yelling at JavaScript and its attempt at global variables</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="2015_09_KiwiPyCon_Lightning">Slides</a> | <a href="https://youtu.be/_35tn0KrVMo?t=2370">Video</a></div> 
         </div>
 	<div class="row">&nbsp;</div>
         <div class="row">
           <div class="four columns"><a href="http://2015.phpconference.org.nz/conference-warm-up/">PHP New Zealand Warm-Up</a><br>Wellington, September 2015</div>
           <div class="four columns">Hat Rack</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="2015_09_PHPWellington">Slides</a></div> 
         </div>
 	<div class="row">&nbsp;</div>
@@ -194,14 +194,14 @@
         <div class="row">
           <div class="four columns">OpenStack Miniconf<br>Brisbane, July 2015</div>
           <div class="four columns">xyz, abc, def</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="https://twitter.com/glasnt/status/626897751335309312">Slide</a> | <a href="https://twitter.com/glasnt/status/627020535646412800">Feedback</a></div>
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
           <div class="four columns"><a href="http://sypy.org">SyPy</a><br>Sydney, July 2015</div>
           <div class="four columns">Hat Rack</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="2015_07_SyPy">Slides</a></div>
         </div> 
        	<div class="row">&nbsp;</div>
@@ -214,7 +214,7 @@
         <div class="row">
           <div class="four columns">&nbsp;</div>
           <div class="four columns">Ignite Karaoke</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="https://twitter.com/s_mcleod/status/621899282757464064">Twitter</a></div>
         </div>
 
@@ -222,7 +222,7 @@
         <div class="row">
           <div class="four columns"><a href="http://www.meetup.com/devops-sydney/">DevOps</a><br>Sydney, June 2015</div>
           <div class="four columns"><a href="http://www.meetup.com/devops-sydney/events/219798291/">JavaScript Rant</a></div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="2015_06_DevOps">Slides</a> | <a href="https://www.youtube.com/watch?v=nx0yt0YsDnA">Video</a></div>
         </div>
 
@@ -247,7 +247,7 @@
         <div class="row">
           <div class="four columns"><a href="http://www.meetup.com/devops-sydney/">DevOps</a><br>Sydney, March 2015</div>
           <div class="four columns"><a href="http://www.meetup.com/devops-sydney/events/219798291/">Hat Rack</a></div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="2015_03_DevOps/HatRack.pdf">Slides</a></div>
         </div>
 
@@ -256,7 +256,7 @@
         <div class="row">
           <div class="four columns">PHP Australia Warm-Up<br>Sydney, March 2015</div>
           <div class="four columns">Hat Rack</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="2015_03_SydPHP/HatRack.pdf">Slides</a></div>
         </div>
    	<div class="row">&nbsp;</div>
@@ -284,7 +284,7 @@
         <div class="row">
           <div class="four columns">Women Who Code<br>Sydney, December 2014</div>
           <div class="four columns">Hack and Tell - Machiavelli</div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="2014_12_WomenWhoCode">Slides</a>Video</a></div>
         </div>
 
@@ -293,7 +293,7 @@
         <div class="row">
           <div class="four columns"><a href="http://www.meetup.com/devops-sydney/">DevOps Sydney</a><br>Sydney, November 2014</div>
           <div class="four columns"><a href="http://www.meetup.com/devops-sydney/events/153704752/">Integrating Machiavelli and Nagios</a></div>
-          <div class="two columns">Lightning Talk</div>
+          <div class="two columns">Short Talk</div>
           <div class="two columns"><a href="2015_03_DevOps/HatRack.pdf">Slides</a></div>
         </div>
         <div class="row">&nbsp;</div>
