--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <div class="four columns">Women Who Code<br>Sydney, December 2014</div>
           <div class="four columns">Hack and Tell - Machiavelli</div>
           <div class="two columns">Short Talk</div>
-          <div class="two columns"><a href="2014_12_WomenWhoCode">Slides</a>Video</a></div>
+          <div class="two columns"><a href="2014_12_WomenWhoCode">Slides</a></div>
         </div>
 
    	<div class="row">&nbsp;</div>
@@ -299,13 +299,13 @@
         <div class="row">&nbsp;</div>
         <div class="row">
           <div class="four columns"><a href="http://2014.osdc.com.au/">Open Source Developers Conference</a><br>Gold Coast, October 2014</div>
-          <div class="four columns"><a href="http://2014.osdc.com.au/presentation/481-all-else-be-graphed">Before All Else, Be Graphed</a></div>
+          <div class="four columns"><a href="http://2014.osdc.com.au/presentation/12-disentangle-new-fangled-image-mangler">Disentangle a new fangled image mangler</a></div>
           <div class="two columns">Talk</div>
-          <div class="two columns"><a href=2014_10_OSDC_Gyprock">Slides</a> | <a href="https://www.youtube.com/watch?v=bQfkXh__vnc">Video</a></div>
+          <div class="two columns"><a href="2014_10_OSDC_Gyprock">Slides</a> | <a href="https://www.youtube.com/watch?v=bQfkXh__vnc">Video</a></div>
         </div>
         <div class="row">
           <div class="four columns">&nbsp;</div>
-          <div class="four columns"><a href="http://2014.osdc.com.au/presentation/12-disentangle-new-fangled-image-mangler">Disentangle a new fangled image mangler</a></div>
+          <div class="four columns"><a href="http://2014.osdc.com.au/presentation/481-all-else-be-graphed">Before All Else, Be Graphed</a></div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="2014_10_OSDC_Machiavelli">Slides</a> | <a href="https://www.youtube.com/watch?v=6i0kMCOOIaY">Video</a></div>
         </div>
