--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="four columns"><a href="https://sydphp.org/">SydPHP</a><br>Sydney, April 2016</div>
           <div class="four columns">A short story of emoji</div>
           <div class="two columns">Short Talk</div>
-          <div class="two columns"><a href="2016_03_DjangoConEU">Slides</a></div>
+          <div class="two columns"><a href="2016_04_SydPHP">Slides</a></div>
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
