--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
       <h2>Full talk history</h2>
 
         <div class="row">
+          <div class="four columns"><a href="www.webdirections.org/code16/">Web Directions Code</a><br>Sydney &amp; Melbourne, July 2016</div>
+          <div class="four columns"><a href="http://www.webdirections.org/code16/speakers/katie-mclaughin.html">The power and responsibility of Unicode adoption</a></div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="http://glasnt.com/talks/2016_07_WD_Code/">Slides</a></div>
+        </div>
+
+        <div class="row">
           <div class="four columns"><a href="http://ignitesydney.com">Ignite Sydney</a><br>Sydney, June 2016</div>
           <div class="four columns"><a href="http://web.archive.org/web/20160622232400/http://www.ignitesydney.com/speakers/">Emoji are broken 😭</a></div>
           <div class="two columns">Short Talk</div>
@@ -89,7 +96,7 @@
           <div class="four columns"><a href="https://djangocon.eu/">DjangoCon Europe</a><br>Budapest, March 2016</div>
           <div class="four columns"><a href="https://djangocon.eu/speakers/11">The power and responsibility of Unicode adoption</a></div>
           <div class="two columns">Talk</div>
-          <div class="two columns"><a href="2016_03_DjangoConEU">Slides</a> | <a href="opbeat.com/events/djangocon-eu-2016/">Video</a></div>
+          <div class="two columns"><a href="2016_03_DjangoConEU">Slides</a> | <a href="https://opbeat.com/events/djangocon-eu-2016/">Video</a></div>
         </div>
         <div class="row">
           <div class="four columns">&nbsp;</div>
