--- a/2016_07_WD_Code/index.html
+++ b/2016_07_WD_Code/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/projection_white.css" id="theme">
     <link rel="stylesheet" href="lib/font/pt-sans/pt-sans.css">
-    <link rel="stylesheet" href="lib/css/zenburn.css">
+    <link rel="stylesheet" href="lib/css/github.css">
     <link rel="stylesheet" href="css/glasnt.css">
     <script>
       var link = document.createElement( 'link' );
