--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h2>Full talk history</h2>
 
         <div class="row">
-          <div class="four columns"><a href="www.webdirections.org/code16/">Web Directions Code</a><br>Sydney &amp; Melbourne, July 2016</div>
+          <div class="four columns"><a href="http://www.webdirections.org/code16/">Web Directions Code</a><br>Sydney &amp; Melbourne, July 2016</div>
           <div class="four columns"><a href="http://www.webdirections.org/code16/speakers/katie-mclaughin.html">The power and responsibility of Unicode adoption</a></div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="http://glasnt.com/talks/2016_07_WD_Code/">Slides</a></div>
