--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="four columns"><a href="https://2016.pycon-au.org/">PyCon AU 2016</a><br>Melbourne, 2016</div>
           <div class="four columns"><a href="https://2016.pycon-au.org/schedule/19/view_talk?day=saturday">The power and responsibility of Unicode adoption</a></div>
           <div class="two columns">Talk</div>
-          <div class="two columns"><a href="http://glasnt.com/talks/2016_07_PyConAU/">Slides</a> | <a href="https://t.co/yDzMmWCYsN">Video</a></div>
+          <div class="two columns"><a href="http://glasnt.com/talks/2016_07_PyConAU/">Slides</a> | <a href="https://www.youtube.com/watch?v=HVqbL8Sl4YM">Video</a></div>
         </div>
         <div class="row">
           <div class="four columns"><a href="http://www.webdirections.org/code16/">Web Directions Code</a><br>Sydney &amp; Melbourne, July 2016</div>
