--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
       <h2>Full talk history</h2>
 
         <div class="row">
+          <div class="four columns"><a href="http://2016.devworld.com.au/">/dev/world 2016</a><br>Melbourne, 2016</div>
+          <div class="four columns">The power and responsibility of Unicode adoption</a></div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="http://glasnt.com/talks/2016_08_DevWorld/">Slides</a></div>
+        </div>
+        <div class="row">
           <div class="four columns"><a href="https://2016.pycon-au.org/">PyCon AU 2016</a><br>Melbourne, 2016</div>
           <div class="four columns"><a href="https://2016.pycon-au.org/schedule/19/view_talk?day=saturday">The power and responsibility of Unicode adoption</a></div>
           <div class="two columns">Talk</div>
