--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="four columns"><a href="http://ignitesydney.com">Ignite Sydney</a><br>Sydney, June 2016</div>
           <div class="four columns"><a href="http://web.archive.org/web/20160622232400/http://www.ignitesydney.com/speakers/">Emoji are broken 😭</a></div>
           <div class="two columns">Short Talk</div>
-          <div class="two columns"><a href="http://glasnt.com/talks/2016_06_IgniteSydney/">Slides</a></div>
+          <div class="two columns"><a href="http://glasnt.com/talks/2016_06_IgniteSydney/">Slides</a> | <a href="http://www.ignitetalks.io/videos/emoji-are-broken">Video</a></div>
         </div>
 
         <div class="row">
