Update video links

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="four columns"><a href="http://2016.devworld.com.au/">/dev/world 2016</a><br>Melbourne, August 2016</div>
           <div class="four columns">The power and responsibility of Unicode adoption</a></div>
           <div class="two columns">Talk</div>
-          <div class="two columns"><a href="http://glasnt.com/talks/2016_08_DevWorld/">Slides</a></div>
+          <div class="two columns"><a href="http://glasnt.com/talks/2016_08_DevWorld/">Slides</a> | <a href="https://www.youtube.com/watch?v=MtHk71z-piQ">Video</a></div>
         </div>
         <div class="row">
           <div class="four columns"><a href="https://2016.pycon-au.org/">PyCon AU 2016</a><br>Melbourne, August 2016</div>
@@ -82,13 +82,13 @@
           <div class="four columns">&nbsp; </div>
           <div class="four columns">Katie Conf - A Post Conference Report</div>
           <div class="two columns">Short Talk</div>
-          <div class="two columns"><a href="http://glasnt.com/talks/2016_08_KatieConf/">Slides</a></div>
+          <div class="two columns"><a href="http://glasnt.com/talks/2016_08_KatieConf/">Slides</a> | <a href='https://youtu.be/xJ1-QdatS9Q?t=1688'>Video</a></div>
         </div>
         <div class="row">
           <div class="four columns"><a href="http://www.webdirections.org/code16/">Web Directions Code</a><br>Sydney &amp; Melbourne, July 2016</div>
           <div class="four columns"><a href="http://www.webdirections.org/code16/speakers/katie-mclaughin.html">The power and responsibility of Unicode adoption</a></div>
           <div class="two columns">Talk</div>
-          <div class="two columns"><a href="http://glasnt.com/talks/2016_07_WD_Code/">Slides</a></div>
+          <div class="two columns"><a href="http://glasnt.com/talks/2016_07_WD_Code/">Slides</a> | <a href="https://www.webdirections.org/blog/video-ristretto-katie-mclaughlin-power-responsibility-unicode-adoption/">Video</a></div>
         </div>
 
         <div class="row">
