--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
   <div class="section">
     <div class="container">
       <h2>Full talk history</h2>
+        <div class="row">
+          <div class="four columns"><a href="https://sydphp.org/">SydPHP</a><br>Sydney, October 2016</div>
+          <div class="four columns">The power and responsibility of Unicode adoption</div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2016_10_SydPHP">Slides</a></div>
+        </div>
 
         <div class="row">
           <div class="four columns"><a href="https://nzpug.org">Kiwi PyCon</a><br>Dunedin, September 2016</div>
