--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
     <div class="container">
       <h2>Full talk history</h2>
         <div class="row">
+          <div class="four columns"><a href="https://sydphp.org/">SydPHP</a><br>Sydney, November 2016</div>
+          <div class="four columns"><a href="https://www.meetup.com/SydPHP/events/235076382/">The state of web and online communities</a></div>
+          <div class="two columns">Panel</div>
+          <div class="two columns"><a href="https://twitter.com/DarrenNolan_/status/801704215156428800">Twitter</a></div>
+        </div>
+
+        <div class="row">
           <div class="four columns"><a href="https://sydphp.org/">SydPHP</a><br>Sydney, October 2016</div>
           <div class="four columns">The power and responsibility of Unicode adoption</div>
           <div class="two columns">Talk</div>
