--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
     <div class="container">
       <h2>Full talk history</h2>
         <div class="row">
+          <div class="four columns"><a href="https://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/">Ruby On Rails, Oceanania</a><br>Sydney, December 2016</div>
+          <div class="four columns"><a href="https://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/events/234773812/"</a>The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨ </div>
+          <div class="two columns">Talk</div>
+          <div class="two columns"><a href="2016_12_RoroSyd">Slides</a> | <a href="https://twitter.com/mobywhale/status/808584125456138240">Twitter</a>
+        </div>
+        </div>
+
+        <div class="row">
           <div class="four columns"><a href="https://sydphp.org/">SydPHP</a><br>Sydney, November 2016</div>
           <div class="four columns"><a href="https://www.meetup.com/SydPHP/events/235076382/">The state of web and online communities</a></div>
           <div class="two columns">Panel</div>
@@ -288,7 +296,7 @@
    	<div class="row">&nbsp;</div>
         <div class="row">
           <div class="four columns">Ruby on Rails Oceania<br>Sydney, April 2015</div>
-          <div class="four columns">Disentangle a new fangled image mangler</div>
+          <div class="four columns"><a href="https://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/events/219319589/">Disentangle a new fangled image mangler</a></div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="2015_04_RoroSyd">Slides</a></div>
         </div>
