--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h2>Full talk history</h2>
         <div class="row">
           <div class="four columns"><a href="https://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/">Ruby On Rails, Oceanania</a><br>Sydney, December 2016</div>
-          <div class="four columns"><a href="https://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/events/234773812/"</a>The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨ </div>
+          <div class="four columns"><a href="https://www.meetup.com/Ruby-On-Rails-Oceania-Sydney/events/234773812/">The Power ⚡️ and Responsibility 😓 of Unicode Adoption ✨ </a></div>
           <div class="two columns">Talk</div>
           <div class="two columns"><a href="2016_12_RoroSyd">Slides</a> | <a href="https://twitter.com/mobywhale/status/808584125456138240">Twitter</a>
         </div>
