--- a/2017_05_PyCon_US_Snek/simple.html
+++ b/2017_05_PyCon_US_Snek/simple.html
@@ -1,8 +1,9 @@
 <title>Hello World</title>
-<style> body { font-family: "Arial" }
-h1 { color: #452768; font-size: 24px }
- </style>
 <h1>Hello World</h1>
 
 <p>Welcome to the information super highway</p>
+<form>
+  <label>Username: </label>
+  <input type="text" id="username">
+  <button>Surf!</button>
 </form>
