--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ layout: page
                   {% if talk.slides %} <a href="{{talk.slides}}">Slides</a>{% endif %}
                   {% if talk.video %} <a href="{{talk.video}}">Video</a>{% endif %}
                   {% if talk.twitter %} <a href="{{talk.twitter}}">Twitter</a>{% endif %}
+                  {% if talk.transcript %} <a href="{{talk.transcript}}">Transcript</a>{% endif %}
             </div>
           </div>
         {% endfor %}
