--- a/2017_08_PyConAU/index.html
+++ b/2017_08_PyConAU/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="css/theme/projection_white.css" id="theme">
     <link rel="stylesheet" href="lib/font/pt-sans/pt-sans.css">
     <link rel="stylesheet" href="lib/css/github.css">
-    <link rel="stylesheet" href="">
     <script>
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
@@ -36,6 +35,8 @@
     </div>
     <script src="lib/js/head.min.js"></script>
     <script src="js/reveal.js"></script>
+    <script src="js/27count.js"></script>
+    <script src="js/27count_lib.js"></script>
     <script>
       Reveal.initialize({
         controls: false,
