--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ layout: page
                   {% if talk.video %} <a href="{{talk.video}}">Video</a>{% endif %}
                   {% if talk.twitter %} <a href="{{talk.twitter}}">Twitter</a>{% endif %}
                   {% if talk.transcript %} <a href="{{talk.transcript}}">Transcript</a>{% endif %}
+                  {% if talk.feedback %} <a href="{{talk.feedback}}">Feedback</a>{% endif %}
             </div>
           </div>
         {% endfor %}
