--- a/2017_10_Constellation/Bees.podium/index.html
+++ b/2017_10_Constellation/Bees.podium/index.html
@@ -23,7 +23,7 @@
     var slideshow = remark.create({
       ratio: "16:10", // Change to "4:3" for Standard Aspect Ratio
       slideNumberFormat: "", // Remove to re-enable page numbers
-      sourceUrl: 'slides.md'
+      sourceUrl: 'slides.md',
     });
     </script>
   </body>
