--- a/2017_11_BSidesWLG/index.html
+++ b/2017_11_BSidesWLG/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="lib/font/pt-sans/pt-sans.css">
     <link rel="stylesheet" href="lib/css/github.css">
     <link rel="stylesheet" href="css/glasnt.css">
+    <link rel="stylesheet" href="css/emoji_glitch.css">
     <script>
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
