--- a/2018_04_SyPy/index.html
+++ b/2018_04_SyPy/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="lib/font/pt-sans/pt-sans.css">
     <link rel="stylesheet" href="lib/css/github.css">
     <link rel="stylesheet" href="css/glasnt.css">
-    <link rel="stylesheet" href="css/emoji_glitch.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script>
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
