--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: page
         <div class="row">&nbsp;</div>
         <div class="row">
         <p>
-All slides are hosted on <a href="https://github.com/glasnt/talks">GitHub</a>. See also: <a href="http://lanyrd.com/profile/glasnt/">Lanyrd profile</a>
+All slides are hosted on <a href="https://github.com/glasnt/talks">GitHub</a>. See also: <a href="http://pyvideo.org/speaker/katie-mclaughlin.html">pyvideo profile</a>
 <br>
         <a href="https://www.flickr.com/photos/135164669@N05/21144018852/in/dateposted/">Header image</a> by <a href="https://www.flickr.com/photos/135164669@N05/">Tobi NZPug</a>, used under <a href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a> | 
         <a href="https://www.flickr.com/photos/140681500@N07/25783265643/in/dateposted/">Footer image</a> by <a href="https://www.flickr.com/photos/140681500@N07/">Bartek Pawlik</a>, used under <a href="https://creativecommons.org/licenses/by-nc/2.0/">CC BY-NC 2.0</a>
