--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ layout: page
 
   <div class="section">
     <div class="container">
-      <h2>Full talk history</h2>
+      <h2>Talk history</h2>
+      <h4>🇦🇺 🇳🇿 🇭🇺 🇺🇸 🇬🇧 🇩🇪 🇹🇼</h4>
         {% for c in site.data.talks %} 
           <div class="row">&nbsp;</div>
           <div class="row">
