--- a/2018_10_DjangoConUS.podium/index.html
+++ b/2018_10_DjangoConUS.podium/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <textarea id='source'></textarea>
-    <script src="/resources/remark.js"></script>
+    <script src="../resources/remark.js"></script>
     <script>
         var slideshow;
 
