--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ layout: page
                   {% if talk.transcript %} <a href="{{talk.transcript}}">Transcript</a>{% endif %}
                   {% if talk.feedback %} <a href="{{talk.feedback}}">Feedback</a>{% endif %}
                   {% if talk.article %} <a href="{{talk.article}}">Article</a>{% endif %}
+                  {% if talk.photo %} <a href="{{talk.photo}}">Photo</a>{% endif %}
             </div>
           </div>
         {% endfor %}
