--- a/2019_02_PyCascades.podium/index.html
+++ b/2019_02_PyCascades.podium/index.html
@@ -8,6 +8,8 @@
   <body>
     <textarea id='source'></textarea>
     <script src="../resources/remark.js"></script>
+    <script src="js/27count_lib.js"></script>
+    <script src="js/27count.js"></script>
     <script>
         var slideshow;
 
